...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/handy_bg"
    >

    <Button
        android:id="@+id/next_button"
        style="@style/Button.Green"
        android:text="@string/next"
        />

    <TextView
        android:id="@+id/nav_text"
        style="@style/TextView.Navbar"
        android:text="@string/confirmation"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/next_button"
...
                android:paddingLeft="@dimen/default_margin"
                android:paddingRight="@dimen/default_margin"
                android:text="@string/payment_confirmed"
                />

            <com.handybook.handybook.ui.widget.PasswordInputTextView
                android:id="@+id/password_text"
                style="@style/EditText.Last.Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header_text"
                android:layout_marginBottom="@dimen/default_margin"
                android:visibility="gone"
                tools:visibility="visible"
                />

            <LinearLayout
                android:id="@+id/options_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header_text"
                android:layout_marginBottom="@dimen/default_margin"
                android:background="@color/white"
                android:orientation="vertical"
...
