...
            android:paddingStart="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"
            android:src="@drawable/ic_card_blank"
            />

        <com.handybook.handybook.core.ui.widget.CreditCardNumberInputTextView
            android:id="@+id/credit_card_text"
            style="@style/EditText.CreditCard"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_edit_text_no_border"
            android:enabled="false"
            />
...
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <com.handybook.handybook.core.ui.widget.CreditCardExpDateInputTextView
            android:id="@+id/exp_text"
            style="@style/EditText.CreditCardExp"
            android:layout_weight="1"
            />

        <com.handybook.handybook.core.ui.widget.CreditCardCVCInputTextView
            android:id="@+id/cvc_text"
            style="@style/EditText.CreditCardCVC"
            android:layout_weight="1"
            android:background="@drawable/bg_edit_text_no_border"
            />

        <FrameLayout
...
