<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/addr_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <com.handybook.handybook.core.ui.widget.StreetAddressInputTextView
            android:id="@+id/autocomplete_address_text_street"
            style="@style/EditText.StreetAddress"
            android:layout_weight="2"
            android:width="0dp"
            android:dropDownWidth="match_parent"
            />

        <EditText
            android:id="@+id/autocomplete_address_text_other"
            style="@style/EditText.OtherAddress"
            android:layout_weight="3"
            android:width="0dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/autocomplete_address_city_state_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <com.handybook.handybook.core.ui.widget.CityInputTextView
            android:id="@+id/autocomplete_address_text_city"
            style="@style/EditText.City"
            android:layout_weight="2"
            android:width="0dp"
            android:dropDownWidth="match_parent"
            />

        <com.handybook.handybook.core.ui.widget.StateInputTextView
            android:id="@+id/autocomplete_address_text_state"
            style="@style/EditText.State"
            android:layout_weight="3"
            android:width="0dp"
            />

    </LinearLayout>
</LinearLayout>
