...
    <string name="state">State</string>
    <string name="details">Details</string>
    <string name="tell_us_job">Got it! Tell us about the job</string>
    <string name="tell_us_place">Tell us about your place</string>
    <string name="fragment_booking_options_input_instructions_cleaning_service">What is the size of your home?</string>
    <string name="fragment_booking_options_input_instructions_noncleaning_service">Tell us about the job</string>
    <string name="comments">Comments</string>
    <string name="time">Time</string>
    <string name="select_start_time">Select a start time</string>
    <string name="pro_x_availability_formatted">%1$s\'s Availability</string>
    <string name="change_pro">Change Pro</string>
    <string name="choose_pro">Choose Pro</string>
    <string name="request_pro_formatted">Request %1$s</string>
...
    <string name="ceiling_fan">Ceiling/Bath fans</string>
    <string name="ceiling_fan_service_description">Handy makes repairing or installing fans a breeze.</string>
    <string name="outlets"><![CDATA[Outlets & light switches]]></string>
    <string name="outlets_service_description">Add dimmers, swap switches, and replace plugs with USBs. </string>
    <string name="other_electrical">Other electrical service</string>
    <string name="other_electrical_service_description">Have something more specific in mind? Tell us!</string>
    <string name="hanging_items">Hanging items</string>
    <string name="hanging_items_service_description"><![CDATA[Mirror mirror on the wall (and shelves & pictures too).]]></string>
    <string name="ac_installation">Air Conditioners</string>
    <string name="ac_installation_service_description">Helping you stay cool.</string>
    <string name="furniture_assembly">Furniture assembly</string>
    <string name="furniture_assembly_service_description">We\'ll get your stuff made in no time.</string>
    <string name="moving_help">Moving help</string>
...
