<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/handy_bg">

    <include
        android:id="@+id/booking_detail_view"
        layout="@layout/element_booking_detail"/>

</RelativeLayout>
